<resources>
    <string name="app_name">میز یادداشت</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_persian">میز یادداشت</string>
    <string name="search_menu">جستجو</string>
    <string name="add_menu">افزودن</string>
    <string name="ioSlide_menu">پوشه ها</string>
    <string name="grouping">گروه بندی ها :</string>
    <string name="priorities_menu">اولویت ها</string>
    <string name="pin">سنجاق</string>
    <string name="note_delete">حذف</string>
    <string name="pinning_note_add_edit_fragment">سنجاق کردن یادداشت</string>
    <string name="title_note">جُستار</string>
    <string name="des_note">توضیحات</string>
    <string name="save_note">ثبت</string>
    <string name="edit_folder_menu">ویرایش</string>
    <string name="delete_folder_menu">حذف</string>
    <string name="saveNewFolder">ثبت</string>
    <string name="name_new_folder_add">نام پوشه</string>
    <string name="add_folder_new">افزودن پوشه</string>
    <!--alert dialog-->
    <string name="delete_folder_title">حذف پوشه</string>
    <string name="delete_note_title">حذف یادداشت</string>
    <string name="delete_folder_successfully">پوشه حذف شد!</string>
    <string name="delete_note_successfully">یادداشت حذف شد!</string>
    <string name="update_note_successfully">یادداشت بروز شد!</string>
    <string name="insert_note_successfully">یادداشت افزوده شد!</string>
    <string name="subject_fragment_edit_folder">ویرایش پوشه</string>
    <string name="repeated_subject_folder">جُستار پوشه از قبل موجود است!</string>
    <string name="folder_upgraded_successfully">پوشه بروز شد!</string>
    <string name="folder_insert_successfully">پوشه افزوده شد!</string>
    <string name="note_not_null_des_title">جُستار و توضیحات را پر کنید!</string>
    <string name="exit_app_title">خروج از برنامه</string>
    <string name="exit_app_message">آیا میخواهید از برنامه خارج شوید؟</string>
    <string name="max_of_number_of_folder_error">به سقف تعداد پوشه ها رسیدید!</string>
    <string name="empty_title_of_folder_error">نام پوشه نمی تواند کمتر سه نویسه باشد!</string>
    <string name="empty_title_of_note_error">جُستار یادداشت نمی تواند کمتر سه نویسه باشد!</string>
    <string name="note_not_found_error">یادداشت پیدا نشد!!!</string>
    <!--filtering-->
    <string name="note_filter_by_all_folder">نمایش همه یادداشت ها!</string>
    <string name="submit_notification_note">ثبت اعلان</string>
    <string name="export_note_to_phone">صدور در حافظه</string>
    <string name="share_note">به اشتراک گذاری</string>
    <string name="copy_note_to_clipboard">پچین برداری</string>

    <!--channel notification-->
    <string name="channel_name">یادداشت ها</string>
    <string name="channel_description">برای تنظیم برخی یادداشت ها به صورت اعلان</string>

    <string name="copy_note_to_clipboard_successfully">یادداشت در clipboard ذخیره شد!</string>
    <string name="show_note_order_by_pin_menu">اولویت نمایش با سنجاق ها</string>
    <string name="search_by_date_menu">جستجو براساس تاریخ</string>
    <string name="export_to_phone_menu">صدور همه در حافظه گوشی</string>
    <string name="about_us_menu">درباره ما</string>

    <string name="permission_required">برای صدور پرونده ها در حافظه گوشی نیاز به مجوز است.</string>
    <string name="ok">تایید</string>
    <string name="permission_granted">مجوز برای صدور پرونده ها در حافظه گوشی صادر شد.</string>
    <string name="permission_denied">مجوز را در تنظیمات فعال کنید.</string>
    <string name="no_note_available">یادداشتی وجود ندارد!</string>

    <string name="notification_permission_denied">شما مجوز فرستادن اعلانات را نداده اید, برای فعال کردن به تنظیمات بروید.</string>
</resources>